Fixed CensorBlur margins on mobile

--- a/src/stylesheets/components/CensorBlur.scss
+++ b/src/stylesheets/components/CensorBlur.scss
@@ -10,6 +10,6 @@
 
     left: 0;
     top: 0;
-    bottom: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
 }
